--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -1,52 +1,77 @@
-{% extends "resturant/base.html" %}
+{% extends "resturant/base.html" %} 
+
+{% load static %}
+
+
+{% block title %} Home Page {% endblock %}
 
 {% block content %}
+<div class="banner"></div>
 
-<!-- index.html content starts here -->
-<div class="container-fluid">
-    <div class="row">
-
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for post in post_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
-                                </div>
-                            </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                            </a>
-
-                            <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-
-            </div>
+<div class="content-container">
+    <div class="jumbotron jumbotron-fluid" >
+        <div class="container-fluid">
+            <h1 class="display-4">Welcome to Our Website</h1>
+            
+            <p class="lead">Welcome to Swedish dishes!.</p>
         </div>
-    </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
-</div>
 
-<!-- index.html content ends here -->
+
+        <div class="about-us-container">
+            <div class="about-us">
+                <p style="color: wheat;">Welcome to Swedish Dishes – A Culinary Journey of Swedish Delights!
+
+                    Explore a culinary adventure through Sweden's rich food culture at our restaurant. At Swedish Dishes, we strive to offer our guests an authentic taste experience, where traditional recipes and fresh ingredients come together to create memorable meals.
+                    
+                    .</p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="info-list">
+            <ul>
+                <ol>
+                    <h3> Our Kitchen: </h3>
+                    <p class="info-text">Our chefs are passionate about preparing dishes with love and precision. We use carefully selected ingredients to craft a menu that celebrates the Swedish kitchen. 
+                    From classic meatballs and gravlax to modern interpretations of traditional favorites – each dish is a tribute to Sweden's culinary heritage.</p>
+                </ol>
+                <ol>
+                    <h3>Seasonal Ingredients:</h3>
+                    <p class="info-text">We aim to use fresh, local, and seasonal ingredients to ensure that each bite is an explosion of flavors.
+                     Our menu adapts to the season's offerings, guaranteeing a unique and varied dining experience every time you visit us.</p>
+                </ol>
+                <ol>
+                    <h3>Atmosphere and Service:</h3>
+                    <p class="info-text">Swedish Dishes is not just a place to eat – it's a place to enjoy camaraderie and good moments.
+                     Our restaurant is designed to create a relaxed and inviting atmosphere where guests can feel at home.
+                     Our friendly and knowledgeable staff is dedicated to making your experience with us memorable and personal.</p>
+                </ol>
+                <ol>
+                    <h3>Events and Catering:</h3>  
+                    <p class="info-text">Swedish Dishes also offers catering services, allowing you to enjoy our delicacies wherever you are.Explore the rich flavors of the Swedish kitchen at Swedish Dishes – where tradition meets innovation in every bite.
+                    Welcome to a food journey that goes beyond the expected, and let's together create memorable moments at our table. Bon appétit!</p>
+                </ol>
+            </ul>
+        </div>
+        
+        <h1 class="news-header">News!
+            <hr>
+        </h1>
+        
+        {% for news in news_list %}
+        
+        <div class="news-post">
+            <h2>{{ news.title }}</h2>
+            
+            <img src="{{ news.image.url }}" alt="{{ news.title }}" class="img-responsive" style="height: auto; width: 30%;">
+            <p>{{ news.content }}</p>
+            <p>Published on: {{ news.created_at }}</p>
+            
+        </div>
+        
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
