--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <h1 class="display-4">Welcome to Our Website</h1>
             
-            <p class="lead">Welcome to Swedish dishes!.</p>
+            <p class="lead">Welcome to Swedish dishes!</p>
         </div>
 
 
