--- a/resturant/templates/resturant/news_list.html
+++ b/resturant/templates/resturant/news_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "restaurant/base.html" %}
 
 {% block title %}Nyhetslista{% endblock %}
 
@@ -7,17 +7,18 @@
     <h1>Nyhetslista</h1>
 
     {% for news in news_list %}
-      <div class="news-item">
-        <h2>{{ news.title }}</h2>
+    <div class="news-item">
+      <h2>{{ news.title }}</h2>
+      
+      {% if news.image %}
         <img src="{{ news.image.url }}" alt="{{ news.title }}">
-        <p class="pub-date">Publicerad den: {{ news.pub_date }}</p>
-
-        {% news.image %}
-          
-        {% endif %}
-
-        <p>{{ news.content }}</p>
-      </div>
-    {% endfor %}
+      {% else %}
+        <p>No image available</p>
+      {% endif %}
+      
+      <p class="pub-date">Publicerad den: {{ news.created_at }}</p>
+      <p>{{ news.content }}</p>
+    </div>
+  {% endfor %}
   </div>
 {% endblock %}
