--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -162,3 +162,75 @@ p{
 .account-r{
     padding-top: 30px;
 }
+
+.book-head{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.book-form{
+    box-shadow: 7px 4px 5px 5px gray;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    margin-bottom: 90px;
+}
+
+.book-form label {
+    margin-bottom: 10px;
+}
+
+.book-form .form-group {
+    margin-bottom: 15px;
+}
+
+.book-form input,
+.book-form select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+}
+
+.book-form button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.book-form button:hover {
+    background-color: #0056b3;
+}
+
+.messages {
+    margin: 20px 20px;
+    text-align: center;
+}
+
+.message {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    font-size:xx-large;
+}
+
+.message.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.message.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
