--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -5,7 +5,21 @@
 
 {% block title %} Home Page {% endblock %}
 
+{% if messages %}
+
+
+{% endif %}
+
 {% block content %}
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+        <div class="message {{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+</div>
+{% endif %}
 <div class="banner"></div>
 
 <div class="content-container">
@@ -60,10 +74,22 @@
             <hr>
         </h1>
         
-        {% for news in news_list %}
+        <h1>Nyhetslista</h1>
+    <p>Amount of news: {{ news_list|length }}</p> <!-- Visar antalet objekt i listan -->
+
+{% for news in news_list %}
+    <div class="news-item">
         <h2>{{ news.title }}</h2>
-        
-        {% endfor %}
+        <p>{{ news.content }}</p>
+        {% if news.image %}
+            <img src="{{ news.image.url }}" alt="{{ news.title }}">
+        {% else %}
+            <p>No image available</p>
+        {% endif %}
+        <p class="pub-date">Publicerad den: {{ news.created_at }}</p>
+
+    </div>
+{% endfor %}
     </div>
 </div>
 {% endblock %}
