--- a/resturant/templates/resturant/news_list.html
+++ b/resturant/templates/resturant/news_list.html
@@ -4,7 +4,7 @@
 {{ post.content | safe }}
 {% block content %}
 
-  <div class="container">
+  <div class="container-img">
     <h1>News list </h1>
 
     {% for news in news_list %}
