--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -79,10 +79,10 @@
 
 {% for news in news_list %}
     <div class="news-item">
-        <h2>{{ news.title }}</h2>
-        <p>{{ news.content }}</p>
+        <h2 class="news-h2">{{ news.title }}</h2>
+        <p class="news-content">{{ news.content }}</p>
         {% if news.image %}
-            <img src="{{ news.image.url }}" alt="{{ news.title }}">
+            <img src="{{ news.image.url }}" alt="{{ news.title }}" class="img-list">
         {% else %}
             <p>No image available</p>
         {% endif %}
