--- a/resturant/templates/resturant/base.html
+++ b/resturant/templates/resturant/base.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
         {% block title %}
-            Django App
+            Swedish dishes
         {% endblock %}
     </title>
     <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css" />
@@ -29,13 +29,13 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav"> <!-- Nav bar -->
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                 </li>
 
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated %} <!-- If logged in  -->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'book' %}">Booking</a>
                 </li>
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                 </li>
 
-                {% else %}
+                {% else %} <!-- If not logged in  -->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                 </li>
