--- a/resturant/templates/resturant/base.html
+++ b/resturant/templates/resturant/base.html
@@ -19,11 +19,10 @@
     </title>
     <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Swedish Dishes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
