--- a/resturant/templates/resturant/base.html
+++ b/resturant/templates/resturant/base.html
@@ -39,8 +39,12 @@
                     <a class="nav-link" href="{% url 'book' %}">Booking</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'my_booking' %}">My Bookings</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                 </li>
+                
 
                 {% else %} <!-- If not logged in  -->
                 <li class="nav-item">
@@ -49,6 +53,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
                 </li>
+
                 {% endif %}
             </ul>
         </div>
