--- a/resturant/static/css/style.css
+++ b/resturant/static/css/style.css
@@ -262,3 +262,40 @@ p{
 .news-h2{
     margin-top: 15px;
 }
+
+/* Container for bookings */
+.container-book {
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: wheat;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: center;
+}
+
+
+.bookings {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
+    justify-content: center; 
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+/* Styling for each booking item */
+.bookings li {
+    background-color: whitesmoke;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 8px;
+    flex: 1 1 calc(50% - 20px); 
+    box-sizing: border-box; 
+    margin-bottom: 20px; 
+}
