--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -47,23 +47,23 @@
         <div class="info-list"> <!-- Info list -->
             <ul>
                 <ol>
-                    <h3> Our Kitchen: </h3>
+                    <h3 class="info-head"> Our Kitchen: </h3>
                     <p class="info-text">Our chefs are passionate about preparing dishes with love and precision. We use carefully selected ingredients to craft a menu that celebrates the Swedish kitchen. 
                     From classic meatballs and gravlax to modern interpretations of traditional favorites – each dish is a tribute to Sweden's culinary heritage.</p>
                 </ol>
                 <ol>
-                    <h3>Seasonal Ingredients:</h3>
+                    <h3 class="info-head">Seasonal Ingredients:</h3>
                     <p class="info-text">We aim to use fresh, local, and seasonal ingredients to ensure that each bite is an explosion of flavors.
                      Our menu adapts to the season's offerings, guaranteeing a unique and varied dining experience every time you visit us.</p>
                 </ol>
                 <ol>
-                    <h3>Atmosphere and Service:</h3>
+                    <h3 class="info-head">Atmosphere and Service:</h3>
                     <p class="info-text">Swedish Dishes is not just a place to eat – it's a place to enjoy camaraderie and good moments.
                      Our restaurant is designed to create a relaxed and inviting atmosphere where guests can feel at home.
                      Our friendly and knowledgeable staff is dedicated to making your experience with us memorable and personal.</p>
                 </ol>
                 <ol>
-                    <h3>Events and Catering:</h3>  
+                    <h3 class="info-head">Events and Catering:</h3>  
                     <p class="info-text">Swedish Dishes also offers catering services, allowing you to enjoy our delicacies wherever you are.Explore the rich flavors of the Swedish kitchen at Swedish Dishes – where tradition meets innovation in every bite.
                     Welcome to a food journey that goes beyond the expected, and let's together create memorable moments at our table. Bon appétit!</p>
                 </ol>
