--- a/resturant/templates/resturant/my_bookings.html
+++ b/resturant/templates/resturant/my_bookings.html
@@ -1,7 +1,7 @@
 {% extends "resturant/base.html" %}
 
 {% block content %}
-<h1>My Bookings</h1>
+<h1 class="bookings-head">My Bookings</h1>
 
 <div class="container-book">
     {% if bookings %}
