Create edit and delete booking button

--- a/resturant/static/css/style.css
+++ b/resturant/static/css/style.css
@@ -280,7 +280,6 @@ p{
     text-align: center;
 }
 
-
 .bookings {
     display: flex;
     flex-wrap: wrap;
@@ -300,11 +299,36 @@ p{
     flex: 1 1 calc(50% - 20px); 
     box-sizing: border-box; 
     margin-bottom: 20px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
 }
 
 .bookings li:hover {
     transform: translateY(-5px); /* Lift the item slightly */
     box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.3); /* Increase shadow to create a lifting effect */
+}
+
+.booking-details {
+    width: 100%;
+    cursor: pointer;
+}
+
+.booking-actions {
+    margin-top: 10px; /* Space between booking item and actions */
+    text-align: center; /* Center the actions */
+    width: 100%;
+}
+
+.booking-actions a {
+    margin-right: 10px;
+    color: #007bff;
+    text-decoration: none;
+}
+
+.booking-actions a:hover {
+    text-decoration: underline;
 }
 
 .modal-dialog-centered.custom-modal-position {
@@ -314,19 +338,20 @@ p{
 .change-booking{
     text-align: center;
 }
+
 .change-booking, h3{
     padding-top: 30px;
     color:black;
 }
 
-.change-booking-text{
-text-align: center;
-padding-top: 30px;
-font-size:26px;
-color: red;
+.change-booking-text {
+    text-align: center;
+    padding-top: 30px;
+    font-size: 26px;
+    color: red;
 }
 
-.bookings-head{
+.bookings-head {
     padding-top: 10px;
     padding-bottom: 10px;
 }
